# WatchDog--Analytics

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_consumer.py
migrations/: env.py
migrations/versions/: 04988865962c_initial.py  e76c4c48c421_add_price_history_table.py
src/: config.py  database.py  dependencies.py  main.py  models.py  routers.py  schemas.py
src/bot/: main.py
src/services/: kafka_consumer.py  kafka_producer.py  parser.py  scheduler.py  telegram_notifier.py
